--- a/heart_disease_analysis.ipynb
+++ b/heart_disease_analysis.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
        "4   0     2  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -284,83 +284,83 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>115</th>\n",
-       "      <td>37</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>120</td>\n",
-       "      <td>215</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>170</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>56</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>140</td>\n",
-       "      <td>294</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>153</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1.3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>87</th>\n",
-       "      <td>46</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>101</td>\n",
-       "      <td>197</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>156</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>52</th>\n",
-       "      <td>62</td>\n",
+       "      <th>98</th>\n",
+       "      <td>43</td>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
        "      <td>130</td>\n",
-       "      <td>231</td>\n",
+       "      <td>315</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>146</td>\n",
+       "      <td>162</td>\n",
        "      <td>0</td>\n",
-       "      <td>1.8</td>\n",
+       "      <td>1.9</td>\n",
+       "      <td>2</td>\n",
        "      <td>1</td>\n",
-       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>137</th>\n",
+       "      <td>62</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>128</td>\n",
+       "      <td>208</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>140</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>245</th>\n",
+       "      <td>48</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>124</td>\n",
+       "      <td>274</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>166</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>94</th>\n",
-       "      <td>45</td>\n",
+       "      <th>96</th>\n",
+       "      <td>62</td>\n",
        "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>140</td>\n",
+       "      <td>394</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>157</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.2</td>\n",
        "      <td>1</td>\n",
-       "      <td>112</td>\n",
-       "      <td>160</td>\n",
        "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>253</th>\n",
+       "      <td>67</td>\n",
        "      <td>1</td>\n",
-       "      <td>138</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>100</td>\n",
+       "      <td>299</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>125</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.9</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -369,21 +369,21 @@
       ],
       "text/plain": [
        "     age  sex  cp  trestbps  chol  fbs  restecg  thalach  exang  oldpeak  \\\n",
-       "115   37    0   2       120   215    0        1      170      0      0.0   \n",
-       "6     56    0   1       140   294    0        0      153      0      1.3   \n",
-       "87    46    1   1       101   197    1        1      156      0      0.0   \n",
-       "52    62    1   2       130   231    0        1      146      0      1.8   \n",
-       "94    45    0   1       112   160    0        1      138      0      0.0   \n",
+       "98    43    1   2       130   315    0        1      162      0      1.9   \n",
+       "137   62    1   1       128   208    1        0      140      0      0.0   \n",
+       "245   48    1   0       124   274    0        0      166      0      0.5   \n",
+       "96    62    0   0       140   394    0        0      157      0      1.2   \n",
+       "253   67    1   0       100   299    0        0      125      1      0.9   \n",
        "\n",
        "     slope  ca  thal  \n",
-       "115      2   0     2  \n",
-       "6        1   0     2  \n",
-       "87       2   0     3  \n",
-       "52       1   3     3  \n",
-       "94       1   0     2  "
+       "98       2   1     2  \n",
+       "137      2   0     2  \n",
+       "245      1   0     3  \n",
+       "96       1   0     2  \n",
+       "253      1   2     2  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -518,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -527,7 +527,7 @@
        "(36, 0, 25, 0)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -645,7 +645,6 @@
     "    \n",
     "    for i in range(0, len(test_x)):\n",
     "        neighbor_indexes = self.find_neighbors(self.x, self.y, test_x.iloc[i], self.k) \n",
-    "        # print(neighbor_indexes)\n",
     "        majority = y.iloc[neighbor_indexes].mode()\n",
     "        test_pred.at[test_x.index[i], 'target'] = majority.at[0, 'target']\n",
     "\n",
@@ -681,27 +680,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.49781435694283177\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'left_x' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-43-07c338e5a3e5>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     55\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     56\u001b[0m \u001b[0md1\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mDecisionTree\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m0.8\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 57\u001b[1;33m \u001b[0md1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtrain_x\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtrain_y\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     58\u001b[0m \u001b[0mtest_pred\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0md1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtest_x\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     59\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0maccuracy\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtest_pred\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtest_y\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-43-07c338e5a3e5>\u001b[0m in \u001b[0;36mfit\u001b[1;34m(self, x, y)\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     14\u001b[0m   \u001b[1;32mdef\u001b[0m \u001b[0mfit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 15\u001b[1;33m     \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtree\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbuild_tree\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     16\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     17\u001b[0m   \u001b[1;32mdef\u001b[0m \u001b[0mimpurity\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0ma\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mb\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-43-07c338e5a3e5>\u001b[0m in \u001b[0;36mbuild_tree\u001b[1;34m(self, x, y, depth)\u001b[0m\n\u001b[0;32m     34\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     35\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 36\u001b[1;33m         \u001b[0mnode\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mleft_child\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbuild_tree\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mleft_x\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mleft_y\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdepth\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     37\u001b[0m         \u001b[0mnode\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mright_child\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbuild_tree\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mright_x\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mright_y\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdepth\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     38\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'left_x' is not defined"
+      "0.7704918032786885\n"
      ]
     }
    ],
@@ -710,9 +696,9 @@
     "    def __init__(self, pred):\n",
     "        self.left_child = None\n",
     "        self.right_child = None\n",
+    "        self.feature = None\n",
     "        self.pred = pred\n",
     "        self.bound = 0\n",
-    "\n",
     "\n",
     "class DecisionTree:\n",
     "  def __init__(self, max_depth, threshold):\n",
@@ -726,26 +712,60 @@
     "    return 1.0 - (a / (a + b)) ** 2 - (b / (a + b)) ** 2\n",
     "    \n",
     "  def split(self, x, y):\n",
-    "    index = 0\n",
-    "    bound = 0\n",
+    "    best_feature = None\n",
+    "    bound = None\n",
     "    \n",
     "    split_count = [y.target.value_counts()[0], y.target.value_counts()[1]]\n",
     "    best_impurity = self.impurity(split_count[0], split_count[1])\n",
-    "    print(best_impurity)\n",
     "    \n",
-    "    left_split_count = [0, 0]\n",
-    "    right_split_count = split_count.copy()\n",
+    "    for feature in range(0, x.shape[1]):\n",
+    "        left_split_count = [0, 0]\n",
+    "        right_split_count = split_count.copy()\n",
+    "        x_numpy = x.copy().iloc[:, feature].to_numpy()\n",
+    "        y_numpy = y.copy().iloc[:, 0].to_numpy()\n",
+    "                \n",
+    "        thresholds, classes = zip(*sorted(zip(x_numpy, y_numpy)))\n",
+    "        \n",
+    "        for i in range(1, x.shape[0]):\n",
+    "            c = classes[i - 1]\n",
+    "            left_split_count[c] += 1\n",
+    "            right_split_count[c] -= 1\n",
+    "            impurity_left = self.impurity(left_split_count[0], left_split_count[1])\n",
+    "            impurity_right = self.impurity(right_split_count[0], right_split_count[1])\n",
+    "            impurity_total = (i * impurity_left + (x.shape[1] - i) * impurity_right) / x.shape[1]\n",
+    "            \n",
+    "            if thresholds[i] == thresholds[i - 1]:\n",
+    "                continue\n",
+    "                \n",
+    "            if impurity_total < best_impurity:\n",
+    "                best_impurity = impurity_total\n",
+    "                best_feature = feature\n",
+    "                bound = (thresholds[i] + thresholds[i - 1]) / 2\n",
+    "        \n",
     "    \n",
-    "    return bound, index\n",
+    "    return bound, best_feature\n",
     "\n",
     "  def build_tree(self, x, y, depth):\n",
     "    node = Node(pred = y.mode().at[0, 'target'])\n",
-    "    if depth < self.max_depth:\n",
-    "        bound, index = self.split(x, y)\n",
+    "    \n",
+    "    if y.target.value_counts().size == 1:\n",
+    "        return node\n",
+    "            \n",
+    "    if depth < self.max_depth and y.target.value_counts()[0] < self.threshold * y.shape[0]:\n",
     "        \n",
-    "        \n",
-    "        node.left_child = self.build_tree(left_x, left_y, depth + 1)\n",
-    "        node.right_child = self.build_tree(right_x, right_y, depth + 1)\n",
+    "        bound, feature = self.split(x, y)\n",
+    "        if feature is not None:\n",
+    "            indices_left = x.iloc[:, feature] < bound\n",
+    "            \n",
+    "            left_x = x[indices_left]\n",
+    "            right_x = x[~indices_left]\n",
+    "            left_y = y[indices_left]\n",
+    "            right_y = y[~indices_left]\n",
+    "                        \n",
+    "            node.feature = feature\n",
+    "            node.bound = bound\n",
+    "            node.left_child = self.build_tree(left_x, left_y, depth + 1)\n",
+    "            node.right_child = self.build_tree(right_x, right_y, depth + 1)           \n",
     "\n",
     "    return node\n",
     "    \n",
@@ -755,8 +775,8 @@
     "    for i in range(0, len(test_x)):\n",
     "        node = self.tree\n",
     "        while node.left_child:\n",
-    "            print(test_x.iloc[i])\n",
-    "            if test_x.iloc[i] < node.bound:\n",
+    "\n",
+    "            if test_x.iloc[i, node.feature] < node.bound:\n",
     "                node = node.left_child\n",
     "            else:\n",
     "                node = node.right_child\n",
@@ -764,18 +784,11 @@
     "    \n",
     "    return test_pred\n",
     "    \n",
-    "d1 = DecisionTree(4, 0.8)\n",
+    "d1 = DecisionTree(13, 0.8)\n",
     "d1.fit(train_x, train_y)\n",
     "test_pred = d1.predict(test_x)\n",
     "print(accuracy(test_pred, test_y))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
